--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "flowbite-react": "^0.3.4",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
