--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "sweetalert2": "^11.6.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
